removed flake-8 linting

--- a/tox.ini
+++ b/tox.ini
@@ -6,12 +6,6 @@ envlist = py37, lint
 python =
     3.7: py37, lint
 
-[testenv:lint]
-deps =
-    .[test]
-commands =
-    flake8 --verbose DLITE
-
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
@@ -19,6 +13,6 @@ passenv = CI TRAVIS TRAVIS_*
 deps =
     .[all]
 commands =
-    py.test --basetemp={envtmpdir} --cov-report html --cov-report xml --cov=DLITE DLITE/tests/
+    py.test --basetemp={envtmpdir} --cov-report html --cov-report xml --cov=DLITE tests/
     codecov -e TOXENV
 
