--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
 skipsdist = True
-envlist = py37, lint
+envlist = py37
 
 [travis]
 python =
-    3.7: py37, lint
+    3.7: py37
 
 [testenv]
 setenv =
